<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.carlhopkinson.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_content_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:minHeight="@dimen/title_min_height"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/app_1_title"
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacityOrange"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:elevation="@dimen/button_elevation"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/app_2_title"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacityOrange"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:elevation="@dimen/button_elevation"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_3_title"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacityOrange"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:elevation="@dimen/button_elevation"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_4_title"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacityOrange"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:elevation="@dimen/button_elevation"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_5_title"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacityOrange"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:elevation="@dimen/button_elevation"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_6_title"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacityRed"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:elevation="@dimen/button_elevation"/>
</LinearLayout>
